<resources>
    <string name="app_name">4K Full Wallpaper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="popular">Popular</string>
    <string name="random">Random</string>
    <string name="favourite">Favourite</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="photo_source_pixabay_com">Photo source: pixabay.com</string>
</resources>