<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/my_black"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="24dp"
    android:paddingTop="60dp"
    android:layout_height="match_parent">

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/nav_header_image"
        android:src="@drawable/logo"
        android:layout_width="80dp"
        android:layout_height="80dp" />

    <TextView
        android:text="4K FULL \nWallpapers"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:maxLines="2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/nav_header_image"
        android:layout_marginLeft="24dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/home_root"
        android:layout_marginTop="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:onClick="homeNav"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/nav_header_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_home_nav"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popular_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="popularNav"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/home_root"
        tools:layout_editor_absoluteX="24dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_popular_nav" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:baselineAligned="false"
            android:text="@string/popular"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:onClick="randomNav"
        android:id="@+id/random_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/popular_root"
        tools:layout_editor_absoluteX="24dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_random_nav" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:baselineAligned="false"
            android:text="@string/random"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:onClick="favouriteNav"
        android:id="@+id/favourite_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/random_root"
        tools:layout_editor_absoluteX="24dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_favourite_nav" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:baselineAligned="false"
            android:text="@string/favourite"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:onClick="aboutNav"
        android:id="@+id/about_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/favourite_root"
        tools:layout_editor_absoluteX="24dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_about_nav" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:baselineAligned="false"
            android:text="@string/about"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <View
        app:layout_constraintTop_toBottomOf="@id/about_root"
        app:layout_constraintBottom_toTopOf="@id/source"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/my_black"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/source"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/photo_source_pixabay_com"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>